sdl3/packages/include_C/fertig/SDL_stdinc.h

# define SDL_SIZE_MAX SIZE_MAX
# define SDL_SIZE_MAX ((size_t) -1)
#define SDL_HAS_BUILTIN(x) __has_builtin(x)
#define SDL_HAS_BUILTIN(x) 0
typedef uint16_t Uint16;
typedef uint32_t Uint32;
extern  void  SDL_qsort(void *base, size_t nmemb, size_t size, int ( *compare) (const void *, const void *));
extern  void *  SDL_bsearch(const void *key, const void *base, size_t nmemb, size_t size, int ( *compare) (const void *, const void *));
/* NOTE: these double-evaluate their arguments, so you should never have side effects in the parameters */
#define SDL_min(x, y) (((x) < (y)) ? (x) : (y))
#define SDL_max(x, y) (((x) > (y)) ? (x) : (y))
#define SDL_clamp(x, a, b) (((x) < (a)) ? (a) : (((x) > (b)) ? (b) : (x)))
extern  size_t  SDL_wcslen(const wchar_t *wstr);
extern  size_t  SDL_strlen(const char *str);
/**
 * Use this function to compute arc cosine of `x`.
 *
 * The definition of `y = acos(x)` is `x = cos(y)`.
 *
 * Domain: `-1 <= x <= 1`
 *
 * Range: `0 <= y <= Pi`
 *
 * \param x floating point value, in radians.
 * \returns arc cosine of `x`.
 *
 * \since This function is available since SDL 3.0.0.
 */
extern  double  SDL_acos(double x);
extern  float  SDL_acosf(float x);
extern  double  SDL_asin(double x);
extern  float  SDL_asinf(float x);
extern  double  SDL_atan(double x);
extern  float  SDL_atanf(float x);
extern  double  SDL_atan2(double y, double x);
extern  float  SDL_atan2f(float y, float x);
extern  double  SDL_ceil(double x);
extern  float  SDL_ceilf(float x);
extern  double  SDL_copysign(double x, double y);
extern  float  SDL_copysignf(float x, float y);
extern  double  SDL_cos(double x);
extern  float  SDL_cosf(float x);
extern  double  SDL_exp(double x);
extern  float  SDL_expf(float x);
extern  double  SDL_fabs(double x);
extern  float  SDL_fabsf(float x);
extern  double  SDL_floor(double x);
extern  float  SDL_floorf(float x);
extern  double  SDL_trunc(double x);
extern  float  SDL_truncf(float x);
extern  double  SDL_fmod(double x, double y);
extern  float  SDL_fmodf(float x, float y);
extern  double  SDL_log(double x);
extern  float  SDL_logf(float x);
extern  double  SDL_log10(double x);
extern  float  SDL_log10f(float x);
extern  double  SDL_modf(double x, double *y);
extern  float  SDL_modff(float x, float *y);
extern  double  SDL_pow(double x, double y);
extern  float  SDL_powf(float x, float y);
extern  double  SDL_round(double x);
extern  float  SDL_roundf(float x);
extern  long  SDL_lround(double x);
extern  long  SDL_lroundf(float x);
extern  double  SDL_scalbn(double x, int n);
extern  float  SDL_scalbnf(float x, int n);
extern  double  SDL_sin(double x);
extern  float  SDL_sinf(float x);
extern  double  SDL_sqrt(double x);
extern  float  SDL_sqrtf(float x);
extern  double  SDL_tan(double x);
extern  float  SDL_tanf(float x);
/* SDL_iconv_* are now always real symbols/types, not macros or inlined. */
typedef struct SDL_iconv_data_t *SDL_iconv_t;
extern  SDL_iconv_t  SDL_iconv_open(const char *tocode,
                                                   const char *fromcode);
extern  int  SDL_iconv_close(SDL_iconv_t cd);
extern  size_t  SDL_iconv(SDL_iconv_t cd, const char **inbuf,
                                         size_t * inbytesleft, char **outbuf,
                                         size_t * outbytesleft);
/**
 * This function converts a buffer or string between encodings in one pass,
 * returning a string that must be freed with SDL_free() or NULL on error.
 *
 * \since This function is available since SDL 3.0.0.
 */
extern  char * SDL_iconv_string(const char *tocode,
                                               const char *fromcode,
                                               const char *inbuf,
                                               size_t inbytesleft);
#define SDL_iconv_utf8_locale(S)    SDL_iconv_string("", "UTF-8", S, SDL_strlen(S)+1)
#define SDL_iconv_utf8_ucs2(S)      (Uint16 *)SDL_iconv_string("UCS-2", "UTF-8", S, SDL_strlen(S)+1)
#define SDL_iconv_utf8_ucs4(S)      (Uint32 *)SDL_iconv_string("UCS-4", "UTF-8", S, SDL_strlen(S)+1)
#define SDL_iconv_wchar_utf8(S)     SDL_iconv_string("UTF-8", "WCHAR_T", (char *)S, (SDL_wcslen(S)+1)*sizeof(wchar_t))
#define SDL_strlen strlen
#define SDL_wcslen wcslen
/* This needs to be wrapped in an inline rather than being a direct #define,
 * because __builtin_mul_overflow() is type-generic, but we want to be
 * consistent about interpreting a and b as size_t. */
//int SDL_size_mul_overflow_builtin (size_t a,
//                                                     size_t b,
//                                                     size_t *ret)
//{
//    return __builtin_mul_overflow(a, b, ret) == 0 ? 0 : -1;
//}
#define SDL_size_mul_overflow(a, b, ret) (SDL_size_mul_overflow_builtin(a, b, ret))
/* This needs to be wrapped in an inline rather than being a direct #define,
 * the same as the call to __builtin_mul_overflow() above. */
//SDL_FORCE_INLINE int SDL_size_add_overflow_builtin (size_t a,
//                                                     size_t b,
//                                                     size_t *ret)
//{
//    return __builtin_add_overflow(a, b, ret) == 0 ? 0 : -1;
//}
#define SDL_size_add_overflow(a, b, ret) (SDL_size_add_overflow_builtin(a, b, ret))