sdl3/packages/sdl3_stdinc.inc


function SDL_acos(x:cdouble):cdouble;cdecl;external;
function SDL_acosf(x:single):single;cdecl;external;
function SDL_asin(x:cdouble):cdouble;cdecl;external;
function SDL_asinf(x:single):single;cdecl;external;
function SDL_atan(x:cdouble):cdouble;cdecl;external;
function SDL_atanf(x:single):single;cdecl;external;
function SDL_atan2(y:cdouble; x:cdouble):cdouble;cdecl;external;
function SDL_atan2f(y:single; x:single):single;cdecl;external;
function SDL_ceil(x:cdouble):cdouble;cdecl;external;
function SDL_ceilf(x:single):single;cdecl;external;
function SDL_copysign(x:cdouble; y:cdouble):cdouble;cdecl;external;
function SDL_copysignf(x:single; y:single):single;cdecl;external;
function SDL_cos(x:cdouble):cdouble;cdecl;external;
function SDL_cosf(x:single):single;cdecl;external;
function SDL_exp(x:cdouble):cdouble;cdecl;external;
function SDL_expf(x:single):single;cdecl;external;
function SDL_fabs(x:cdouble):cdouble;cdecl;external;
function SDL_fabsf(x:single):single;cdecl;external;
function SDL_floor(x:cdouble):cdouble;cdecl;external;
function SDL_floorf(x:single):single;cdecl;external;
function SDL_trunc(x:cdouble):cdouble;cdecl;external;
function SDL_truncf(x:single):single;cdecl;external;
function SDL_fmod(x:cdouble; y:cdouble):cdouble;cdecl;external;
function SDL_fmodf(x:single; y:single):single;cdecl;external;
function SDL_log(x:cdouble):cdouble;cdecl;external;
function SDL_logf(x:single):single;cdecl;external;
function SDL_log10(x:cdouble):cdouble;cdecl;external;
function SDL_log10f(x:single):single;cdecl;external;
function SDL_modf(x:cdouble; y:Pdouble):cdouble;cdecl;external;
function SDL_modff(x:single; y:Psingle):single;cdecl;external;
function SDL_pow(x:cdouble; y:cdouble):cdouble;cdecl;external;
function SDL_powf(x:single; y:single):single;cdecl;external;
function SDL_round(x:cdouble):cdouble;cdecl;external;
function SDL_roundf(x:single):single;cdecl;external;
function SDL_lround(x:cdouble):longint;cdecl;external;
function SDL_lroundf(x:single):longint;cdecl;external;
function SDL_scalbn(x:cdouble; n:longint):cdouble;cdecl;external;
function SDL_scalbnf(x:single; n:longint):single;cdecl;external;
function SDL_sin(x:cdouble):cdouble;cdecl;external;
function SDL_sinf(x:single):single;cdecl;external;
function SDL_sqrt(x:cdouble):cdouble;cdecl;external;
function SDL_sqrtf(x:single):single;cdecl;external;
function SDL_tan(x:cdouble):cdouble;cdecl;external;
function SDL_tanf(x:single):single;cdecl;external;

type
  PSDL_iconv_t = ^TSDL_iconv_t;
  TSDL_iconv_t = PSDL_iconv_data_t;

function SDL_iconv_open(tocode:Pchar; fromcode:Pchar):TSDL_iconv_t;cdecl;external;
function SDL_iconv_close(cd:TSDL_iconv_t):longint;cdecl;external;
function SDL_iconv(cd:TSDL_iconv_t; inbuf:PPchar; inbytesleft:Psize_t; outbuf:PPchar; outbytesleft:Psize_t):Tsize_t;cdecl;external;
function SDL_iconv_string(tocode:Pchar; fromcode:Pchar; inbuf:Pchar; inbytesleft:Tsize_t):Pchar;cdecl;external;

function SDL_iconv_utf8_locale(S : PChar) : PChar;
function SDL_iconv_utf8_ucs2(S : PChar) : PUint16;
function SDL_iconv_utf8_ucs4(S : PChar) : PUint32;
function SDL_iconv_wchar_utf8(S : Pwchar_t) : PChar;

{*
 * If a * b would overflow, return -1. Otherwise store a * b via ret
 * and return 0.
 *
 * \since This function is available since SDL 3.0.0.
  }
{SDL_FORCE_INLINE int SDL_size_mul_overflow (size_t a, }
{                                            size_t b, }
{                                            size_t *ret) }
{ }
{    if (a != 0 && b > SDL_SIZE_MAX / a)  }
{        return -1; }
{     }
{    *ret = a * b; }
{    return 0; }
{ }
//{$if SDL_HAS_BUILTIN(__builtin_mul_overflow)}
{ This needs to be wrapped in an inline rather than being a direct #define,
 * because __builtin_mul_overflow() is type-generic, but we want to be
 * consistent about interpreting a and b as size_t.  }
{SDL_FORCE_INLINE int SDL_size_mul_overflow_builtin (size_t a, }
{                                                     size_t b, }
{                                                     size_t *ret) }
{ }
{    return __builtin_mul_overflow(a, b, ret) == 0 ? 0 : -1; }
{ }
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   


//{$endif}
{*
 * If a + b would overflow, return -1. Otherwise store a + b via ret
 * and return 0.
 *
 * \since This function is available since SDL 3.0.0.
  }
{//SDL_FORCE_INLINE int SDL_size_add_overflow (size_t a, }
{//                                            size_t b, }
{                                            size_t *ret) }
{ }
{    if (b > SDL_SIZE_MAX - a)  }
{        return -1; }
{     }
{    *ret = a + b; }
{    return 0; }
{ }
//{$if SDL_HAS_BUILTIN(__builtin_add_overflow)}
{ This needs to be wrapped in an inline rather than being a direct #define,
 * the same as the call to __builtin_mul_overflow() above.  }
{SDL_FORCE_INLINE int SDL_size_add_overflow_builtin (size_t a, }
{                                                     size_t b, }
{                                                     size_t *ret) }
{ }
{    return __builtin_add_overflow(a, b, ret) == 0 ? 0 : -1; }
{ }
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   


type
  PSDL_FunctionPointer = ^TSDL_FunctionPointer;
  TSDL_FunctionPointer = procedure (para1:pointer);cdecl;

{$ENDIF read_interface}


{$IFDEF read_implementation}

function SDL_min(x,y : longint) : longint;
var
   if_local1 : longint;
begin
  if x<y then
    if_local1:=x
  else
    if_local1:=y;
  SDL_min:=if_local1;
end;

function SDL_max(x,y : longint) : longint;
var
   if_local1 : longint;
begin
  if x>y then
    if_local1:=x
  else
    if_local1:=y;
  SDL_max:=if_local1;
end;

function SDL_clamp(x,a,b : longint) : longint;
var
   if_local1, if_local2 : longint;
begin
  if x>b then
    if_local1:=b
  else
    if_local1:=x;
  if x<a then
    if_local2:=a
  else
    if_local2:=if_local1;
  SDL_clamp:=if_local2;
end;

function SDL_iconv_utf8_locale(S : PChar) : PChar;
begin
  SDL_iconv_utf8_locale:=SDL_iconv_string('','UTF-8',S,(SDL_strlen(S))+1);
end;

function SDL_iconv_utf8_ucs2(S : PChar) : PUint16;
begin
  SDL_iconv_utf8_ucs2:=PUint16(SDL_iconv_string('UCS-2','UTF-8',S,(SDL_strlen(S))+1));
end;

function SDL_iconv_utf8_ucs4(S : PChar) : PUint32;
begin
  SDL_iconv_utf8_ucs4:=PUint32(SDL_iconv_string('UCS-4','UTF-8',S,(SDL_strlen(S))+1));
end;

function SDL_iconv_wchar_utf8(S : Pwchar_t) : PChar;
begin
  SDL_iconv_wchar_utf8:=SDL_iconv_string('UTF-8','WCHAR_T',Pchar(S),((SDL_wcslen(S))+1)*(sizeof(Twchar_t)));
end;

{$ENDIF read_implementation}
